# loq1_c

./: CMakeLists.txt
src/: library.cpp  library.h  point.cpp  state.cpp
src/actions/: move.cpp  place.cpp
src/block/: block.cpp  block.h  iblock.cpp  lblock.cpp
src/validate/: endable.cpp
